--- a/portfolio.html
+++ b/portfolio.html
@@ -20,33 +20,39 @@
   <body>
     <!--Верхняя линия/навигация-->
     <header class="header">
-      <div class="conteiner header-conteiner">
-        <nav class="header-nav">
+      <div class="conteiner header__conteiner">
+        <nav class="nav">
           <a href="/" class="logo"
-            >Web<span class="logo-header">Studio</span>
+            >Web<span class="logo--color-dark">Studio</span>
           </a>
-          <ul class="list menu-nav">
-            <li class="item">
-              <a href="./index.html" class="link">Студия</a>
+          <ul class="menu nav__menu list">
+            <li class="menu__item">
+              <a href="./index.html" class="menu__link">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+            <li class="menu__item">
+              <a
+                href="./portfolio.html"
+                class="menu__link menu__link--current-color"
+                >Портфолио</a
+              >
             </li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+            <li class="menu__item">
+              <a href="" class="menu__link">Контакты</a>
+            </li>
           </ul>
         </nav>
-        <ul class="list contacts">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact-link">
-              <svg class="icon" width="16" height="14">
+        <ul class="contacts list">
+          <li class="contacts__item">
+            <a href="mailto:info@devstudio.com" class="contacts__link">
+              <svg class="contacts__icon" width="16" height="14">
                 <use href="./img/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="contact-link">
-              <svg class="icon" width="10" height="16">
+          <li class="contacts__item">
+            <a href="tel:+380961111111" class="contacts__link">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./img/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -294,52 +300,54 @@
     </main>
     <!--Подвал-->
     <footer class="footer">
-      <div class="conteiner footer-content">
+      <div class="conteiner footer__content">
         <div class="contact-address">
-          <a href="/" class="logo bottom-logo"
-            >Web<span class="logo-footer">Studio</span>
+          <a href="/" class="logo contact-address__logo"
+            >Web<span class="logo--color-light">Studio</span>
           </a>
-          <address class="location">г. Киев, пр-т Леси Украинки, 26</address>
-          <ul class="list footer-contacts">
-            <li class="contact-item">
-              <a href="mailto:info@example.com" class="footer-link"
+          <address class="contact-address__location">
+            г. Киев, пр-т Леси Украинки, 26
+          </address>
+          <ul class="connect-list list">
+            <li class="connect-list__item">
+              <a href="mailto:info@example.com" class="connect-list__link"
                 >info@example.com</a
               >
             </li>
-            <li class="contact-item">
-              <a href="tel:+380991111111" class="footer-link"
+            <li class="connect-list__item">
+              <a href="tel:+380991111111" class="connect-list__link"
                 >+38 099 111 11 11</a
               >
             </li>
           </ul>
         </div>
-        <div class="soc-icon-footer">
-          <p class="actions-footer">присоединяйтесь</p>
-          <ul class="list soc-icon-list">
-            <li class="soc-icon-item">
-              <a href="" class="soc-icon-link social-link">
-                <svg class="soc-icon" width="20" height="20">
+        <div class="socials">
+          <p class="action-title">присоединяйтесь</p>
+          <ul class="soc-list list">
+            <li class="soc-list__item">
+              <a href="" class="soc-list__link soc-list__link--color-light">
+                <svg class="soc-list__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="soc-icon-item">
-              <a href="" class="soc-icon-link social-link">
-                <svg class="soc-icon" width="20" height="20">
+            <li class="soc-list__item">
+              <a href="" class="soc-list__link soc-list__link--color-light">
+                <svg class="soc-list__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="soc-icon-item">
-              <a href="" class="soc-icon-link social-link">
-                <svg class="soc-icon" width="20" height="20">
+            <li class="soc-list__item">
+              <a href="" class="soc-list__link soc-list__link--color-light">
+                <svg class="soc-list__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="soc-icon-item">
-              <a href="" class="soc-icon-link social-link">
-                <svg class="soc-icon" width="20" height="20">
+            <li class="soc-list__item">
+              <a href="" class="soc-list__link soc-list__link--color-light">
+                <svg class="soc-list__icon" width="20" height="20">
                   <use href="./img/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -347,7 +355,7 @@
           </ul>
         </div>
         <div class="newsletter">
-          <p class="actions-footer">Подпишитесь на рассылку</p>
+          <p class="action-title">Подпишитесь на рассылку</p>
           <form>
             <input
               type="email"
@@ -356,9 +364,9 @@
               placeholder="E-mail"
               required
             />
-            <button type="submit" class="btn send-btn">
+            <button type="submit" class="btn newsletter__btn">
               Подписаться
-              <svg class="icon-send" width="24" height="24">
+              <svg class="newsletter__icon" width="24" height="24">
                 <use href="./img/icons.svg#icon-send"></use>
               </svg>
             </button>
